Fixed data not loading

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/7a2dbded24d57e056180125b1583e7c4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/fe995d232ead2b1253bb3f2378f04f70.data",
+        dataUrl: buildUrl + "https://media.githubusercontent.com/media/RedZebra123H/madalincars/refs/heads/main/Build/fe995d232ead2b1253bb3f2378f04f70.data?download=true",
         frameworkUrl: buildUrl + "/2e972a748059ef388a69e539f102f22a.framework.js",
         codeUrl: buildUrl + "/2c05821f8d815afe4a5890b4581ed7af.wasm",
         streamingAssetsUrl: "StreamingAssets",
